namespaces/live.cloud-platform.service.justice.gov.uk/dc-explore-sandbox-env2/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: dc-explore-sandbox-env2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: dc-explore-sandbox-env2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers

---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: block-egress
  namespace: dc-explore-sandbox-env2
spec:
  order: 50.0
  selector: all()
  egress:
    - action: Deny
  types:
    - Egress

---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-egress-ip
  namespace: dc-explore-sandbox-env2
spec:
  order: 49.0
  selector: all()
  egress:
    - action: Allow
      destination:
        nets:
          - 172.20.0.0/16  # Cloud Platform AWS VPC
          - 10.26.0.0/16   # Modernisation Platform (dev test)
          - 10.27.0.0/16   # Modernisation Platform (preprod prod)
          - 10.202.0.0/20  # LAA Landing Zone (dev)
          - 10.203.0.0/20  # LAA Landing Zone (test)
          - 10.206.0.0/20  # LAA Landing Zone (uat)
          - 10.205.0.0/20  # LAA Landing Zone (stage)
          - 10.204.0.0/20  # LAA Landing Zone (prod)
          - 18.134.215.41/32   # Slack API
          - 18.168.172.238/32  # Slack API
          - 18.169.61.189/32   # Slack API
          - 18.169.120.191/32  # Slack API
  types:
    - Egress
